--- a/index.html
+++ b/index.html
@@ -1,90 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="The Phoenix Roof - Premium Roofing & Exteriors. Instant satellite quotes, AI insurance review, and comprehensive maintenance plans." />
-    <title>The Phoenix Roof | Roofing & Exteriors</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              // Primary Brand Color (Blue/Cyan from Wings)
-              phoenix: {
-                50: '#f0f9ff',
-                100: '#e0f2fe',
-                200: '#bae6fd',
-                300: '#7dd3fc',
-                400: '#38bdf8',
-                500: '#0ea5e9', // Primary Blue
-                600: '#0284c7',
-                700: '#0369a1',
-                800: '#075985',
-                900: '#0c4a6e',
-              },
-              // Secondary Brand Color (Red/Orange from Tail)
-              fire: {
-                50: '#fff1f2',
-                100: '#ffe4e6',
-                200: '#fecdd3',
-                300: '#fda4af',
-                400: '#fb7185',
-                500: '#f43f5e', // Primary Red
-                600: '#e11d48',
-                700: '#be123c',
-                800: '#9f1239',
-                900: '#881337',
-              }
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="The Phoenix Roof - Premium Roofing & Exteriors. Instant satellite quotes, AI insurance review, and comprehensive maintenance plans." />
+  <title>The Phoenix Roof | Roofing & Exteriors</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            // Primary Brand Color (Blue/Cyan from Wings)
+            phoenix: {
+              50: '#f0f9ff',
+              100: '#e0f2fe',
+              200: '#bae6fd',
+              300: '#7dd3fc',
+              400: '#38bdf8',
+              500: '#0ea5e9', // Primary Blue
+              600: '#0284c7',
+              700: '#0369a1',
+              800: '#075985',
+              900: '#0c4a6e',
+            },
+            // Secondary Brand Color (Red/Orange from Tail)
+            fire: {
+              50: '#fff1f2',
+              100: '#ffe4e6',
+              200: '#fecdd3',
+              300: '#fda4af',
+              400: '#fb7185',
+              500: '#f43f5e', // Primary Red
+              600: '#e11d48',
+              700: '#be123c',
+              800: '#9f1239',
+              900: '#881337',
             }
           }
         }
       }
-    </script>
-    <style>
-      /* Custom scrollbar for webkit */
-      ::-webkit-scrollbar {
-        width: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #f1f1f1; 
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #0ea5e9; 
-        border-radius: 4px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #0284c7; 
-      }
-      
-      /* Fix for Chrome Autofill on Dark Inputs */
-      .dark-autofill:-webkit-autofill,
-      .dark-autofill:-webkit-autofill:hover, 
-      .dark-autofill:-webkit-autofill:focus, 
-      .dark-autofill:-webkit-autofill:active {
-          -webkit-text-fill-color: white !important;
-          -webkit-box-shadow: 0 0 0 30px #1e293b inset !important;
-          transition: background-color 5000s ease-in-out 0s;
-      }
-    </style>
+    }
+  </script>
+  <style>
+    /* Custom scrollbar for webkit */
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
 
-<!-- GOOGLE MAPS API SETUP -->
-<script>
-  // Centralized API Key
-  window.GOOGLE_MAPS_API_KEY = "AIzaSyBtRbnXwNWfzGQXT6B8HdHkuI7sSxdF5GQ";
+    ::-webkit-scrollbar-track {
+      background: #f1f1f1;
+    }
 
-  // Global handler for Google Maps Auth Failures
-  window.gm_authFailure = function() {
-    console.error("Google Maps Auth Failure. Likely cause: RefererNotAllowedMapError. You must authorize this domain in Google Cloud Console.");
-    window.dispatchEvent(new Event('gm_auth_failure'));
-  }
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtRbnXwNWfzGQXT6B8HdHkuI7sSxdF5GQ&libraries=places,geometry"></script>
-<link rel="stylesheet" href="/index.css">
+    ::-webkit-scrollbar-thumb {
+      background: #0ea5e9;
+      border-radius: 4px;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: #0284c7;
+    }
+
+    /* Fix for Chrome Autofill on Dark Inputs */
+    .dark-autofill:-webkit-autofill,
+    .dark-autofill:-webkit-autofill:hover,
+    .dark-autofill:-webkit-autofill:focus,
+    .dark-autofill:-webkit-autofill:active {
+      -webkit-text-fill-color: white !important;
+      -webkit-box-shadow: 0 0 0 30px #1e293b inset !important;
+      transition: background-color 5000s ease-in-out 0s;
+    }
+  </style>
+
+  <!-- GOOGLE MAPS API SETUP -->
+  <script>
+    // Centralized API Key
+    window.GOOGLE_MAPS_API_KEY = "AIzaSyBtRbnXwNWfzGQXT6B8HdHkuI7sSxdF5GQ";
+
+    // Global handler for Google Maps Auth Failures
+    window.gm_authFailure = function () {
+      console.error("Google Maps Auth Failure. Likely cause: RefererNotAllowedMapError. You must authorize this domain in Google Cloud Console.");
+      window.dispatchEvent(new Event('gm_auth_failure'));
+    }
+  </script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtRbnXwNWfzGQXT6B8HdHkuI7sSxdF5GQ&libraries=places,geometry"></script>
+  <link rel="stylesheet" href="/index.css">
+  <!-- HubSpot Tracking Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/244666550.js"></script>
 </head>
-  <body>
-    <div id="root"></div>
+
+<body>
+  <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
